testCases/semanticAnalyzerTestCases/error/branchStmts.cs16
/*
    Author: Chris Kaebe
    Date: March 3, 2016
*/

int main(void){
    int y, banana;

    branch(y)
    case 1: ;
    default: writeint(593);
    default: writeint(-1);
    end;

    return banana;
}